--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+.Carrito{
+  background-color: rgb(50, 47, 47) !important;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
