--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,25 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&family=Roboto:wght@100&display=swap");
+* {
+margin: 0;
+padding: 0;
+-webkit-box-sizing: border-box;
+        box-sizing: border-box;
+font-family: 'Roboto', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
+}
 .App {
   text-align: center;
-}
-.Carrito{
-  background-color: rgb(50, 47, 47) !important;
 }
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,13 +28,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -37,4 +36,108 @@
   to {
     transform: rotate(360deg);
   }
+}
+/* -------------------------------------------------------NavBar------------------------------------------------------------------ */
+.preNavbar {
+    height: 100px;
+    color: white;
+}
+.preNavbar ul li{
+    list-style: none;
+
+}
+.preNavbar ul li a{
+    text-decoration: none;
+}
+.tituloMangos {
+    padding-top: 25px;
+    margin-top: -7px;
+}
+.logoNavbar{
+    margin-top: -10px;
+}
+.sesion {
+    padding-top: 30px;
+    margin-top: -6px;
+    padding-left: 0px;
+    color: white !important;
+}
+.iconos-cart{
+    padding-left: 0px;
+    margin-left: 0px;
+}
+.logoMangos {
+    margin-left: 50px;
+    width: 80px; 
+    height: 80px;
+    margin-top: 10px;
+}
+.navBar{
+    background-color: orangered;
+    color: white;
+    height: 50px;
+}
+.navBar ul li {
+    list-style: none;
+    color: black;
+    padding: 0px;
+    text-align: center;
+    margin-left: 30px;
+}
+.navBar ul li a {
+    text-decoration: none;
+    color: black;
+}
+/* -------------------------------------------------------Cart------------------------------------------------------------------ */
+.Carrito{
+  background-color: orangered !important;
+  height: 800px;
+  color: black;
+}
+.alert{
+  color: black;
+  background-color: white;
+  padding-bottom: 20px;
+  margin: 30px;
+}
+/* -------------------------------------------------------Footer------------------------------------------------------------------ */
+.footer{
+  color: white !important;
+}
+.redesSociales ul li {
+  list-style: none;
+}
+.redesSociales ul li a{
+  text-decoration: none;
+}
+/* -------------------------------------------------------Item------------------------------------------------------------------ */
+.ilcontainer{
+  background-color: orangered;
+}
+.Item{
+  list-style: none;
+  padding-top: 20px;
+}
+.Item ul li{
+  text-decoration: none;
+}
+.carditem {
+  width: 480px;
+  padding: 15px;
+}
+.cardetail {
+  max-width: 1700px;
+  height: 452px;
+  margin: 2px;
+  margin-top: 20px;
+}
+.itemsimagen {
+  width: 550px;
+  height: 450px;
+}
+.columnas {
+  padding-left: 15px;
+}
+.detail{
+  background-color: orangered;
 }
