--- a/src/App.css
+++ b/src/App.css
@@ -141,3 +141,14 @@ font-family: 'Roboto Condensed', sans-serif;
 .detail{
   background-color: orangered;
 }
+/* -------------------------------------------------------Loading------------------------------------------------------------------ */
+.loading{
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  margin: 50px;
+  padding-right: 20px;
+}
+.logotipo{
+  border: 2px 2px solid black;
+}
